# rustic

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: audit.yml  main.yml  release.yml
src/: backup.rs  config.rs  forget.rs  main.rs  restic.rs  shell.rs  snapshots.rs  test.rs
