[package]
name = "rustic"
version = "0.1.0"
description = "Restic wrapper for convenient backups"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/bnavetta/rustic"
repository = "https://github.com/bnavetta/rustic.git"
keywords = ["restic", "backups"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
human-panic = "1.0"
itertools = "0.9"
paw = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", features = ["paw"] }
# Allow trace in release builds since it's controlled by a flag
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.5"
tabwriter = "1.2"
toml = "0.5"
tempfile = "3.1"